// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`deriveMessagesTimelineRows > snapshot: live run 1 1`] = `
[
  {
    "assistantCopyStreaming": false,
    "createdAt": "2026-09-02T17:19:35.668Z",
    "durationStart": "2026-09-02T17:19:35.668Z",
    "id": "59094224-bb3d-43b6-b054-322aa849fa00#1:m1",
    "kind": "message",
    "message": {
      "createdAt": "2026-09-02T17:19:35.668Z",
      "id": "59094224-bb3d-43b6-b054-322aa849fa00#1:m1",
      "role": "user",
      "streaming": false,
      "text": "hello",
      "turnId": "59094224-bb3d-43b6-b054-322aa849fa00#1",
      "updatedAt": "2026-09-02T17:19:35.668Z",
    },
    "showAssistantCopyButton": false,
    "showAssistantMeta": false,
  },
  {
    "assistantCopyStreaming": false,
    "createdAt": "2026-09-02T17:19:53.068Z",
    "durationStart": "2026-09-02T17:19:53.068Z",
    "id": "59094224-bb3d-43b6-b054-322aa849fa00#2:m1",
    "kind": "message",
    "message": {
      "createdAt": "2026-09-02T17:19:53.068Z",
      "id": "59094224-bb3d-43b6-b054-322aa849fa00#2:m1",
      "role": "user",
      "streaming": false,
      "text": "build a simple chat app, run it locally, use npm",
      "turnId": "59094224-bb3d-43b6-b054-322aa849fa00#2",
      "updatedAt": "2026-09-02T17:19:53.068Z",
    },
    "showAssistantCopyButton": false,
    "showAssistantMeta": false,
  },
  {
    "assistantCopyStreaming": false,
    "createdAt": "2026-09-02T17:23:35.068Z",
    "durationStart": "2026-09-02T17:23:35.068Z",
    "id": "59094224-bb3d-43b6-b054-322aa849fa00#3:m1",
    "kind": "message",
    "message": {
      "createdAt": "2026-09-02T17:23:35.068Z",
      "id": "59094224-bb3d-43b6-b054-322aa849fa00#3:m1",
      "role": "user",
      "streaming": false,
      "text": "/model",
      "turnId": "59094224-bb3d-43b6-b054-322aa849fa00#3",
      "updatedAt": "2026-09-02T17:23:35.068Z",
    },
    "showAssistantCopyButton": false,
    "showAssistantMeta": false,
  },
  {
    "assistantCopyStreaming": false,
    "createdAt": "2026-09-02T17:24:00.468Z",
    "durationStart": "2026-09-02T17:24:00.468Z",
    "id": "59094224-bb3d-43b6-b054-322aa849fa00#4:m1",
    "kind": "message",
    "message": {
      "createdAt": "2026-09-02T17:24:00.468Z",
      "id": "59094224-bb3d-43b6-b054-322aa849fa00#4:m1",
      "role": "user",
      "streaming": false,
      "text": "anyways can you make it more beautiful, use shadcn",
      "turnId": "59094224-bb3d-43b6-b054-322aa849fa00#4",
      "updatedAt": "2026-09-02T17:24:00.468Z",
    },
    "showAssistantCopyButton": false,
    "showAssistantMeta": false,
  },
]
`;

exports[`deriveMessagesTimelineRows > snapshot: the chat fixture, settled and expanded 1`] = `
[
  {
    "createdAt": "",
    "expanded": false,
    "id": "turn-fold:sess_0001#1",
    "kind": "turn-fold",
    "label": "Worked for 10s",
    "turnId": "sess_0001#1",
  },
  {
    "assistantCopyStreaming": false,
    "createdAt": "",
    "durationStart": "",
    "id": "sess_0001#1:m4",
    "kind": "message",
    "message": {
      "createdAt": "",
      "id": "sess_0001#1:m4",
      "role": "assistant",
      "streaming": false,
      "text": "Server is live at :3000.",
      "turnId": "sess_0001#1",
      "updatedAt": "",
    },
    "showAssistantCopyButton": true,
    "showAssistantMeta": true,
  },
]
`;

exports[`deriveMessagesTimelineRows > snapshot: the chat fixture, settled and expanded 2`] = `
[
  {
    "createdAt": "",
    "expanded": true,
    "id": "turn-fold:sess_0001#1",
    "kind": "turn-fold",
    "label": "Worked for 10s",
    "turnId": "sess_0001#1",
  },
  {
    "assistantCopyStreaming": false,
    "createdAt": "",
    "durationStart": "",
    "id": "sess_0001#1:m1",
    "kind": "message",
    "message": {
      "createdAt": "",
      "id": "sess_0001#1:m1",
      "role": "assistant",
      "streaming": false,
      "text": "Creating the server file, then starting it.",
      "turnId": "sess_0001#1",
      "updatedAt": "",
    },
    "showAssistantCopyButton": false,
    "showAssistantMeta": false,
  },
  {
    "createdAt": "",
    "expanded": false,
    "groupId": "work-group:tool:sess_0001#1:toolu_01WspFixBash1",
    "hasFailure": false,
    "hiddenCount": 1,
    "id": "work-toggle:sess_0001#1:w2",
    "kind": "work-toggle",
    "summary": "Ran 1 command",
    "summaryKind": "command",
  },
  {
    "assistantCopyStreaming": false,
    "createdAt": "",
    "durationStart": "",
    "id": "sess_0001#1:m4",
    "kind": "message",
    "message": {
      "createdAt": "",
      "id": "sess_0001#1:m4",
      "role": "assistant",
      "streaming": false,
      "text": "Server is live at :3000.",
      "turnId": "sess_0001#1",
      "updatedAt": "",
    },
    "showAssistantCopyButton": true,
    "showAssistantMeta": true,
  },
]
`;
